--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-1.61MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-2.25MB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.73MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-410.5KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-165.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-387.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 26023, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-420.1KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-506.0KB/s(Youtube:不良林), server: 36.134.53.194, port: 26012, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.90MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1023.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-5.26MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-404.5KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-12.47MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-420.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-1.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-420.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-420.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-1.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-420.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-1.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-420.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-420.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-1.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-410.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-387.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-420.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
