--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.90MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1023.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-5.26MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-404.5KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-12.47MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-300.9KB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 1aa8948e-1ec1-455f-9e0e-16deebe5502e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-653.3KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-379.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 26059, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-473.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 26060, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-6.21MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.14MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-302.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1023.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-404.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-12.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
