--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-300.9KB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 1aa8948e-1ec1-455f-9e0e-16deebe5502e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
-  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.57MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-653.3KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇨🇳 中国-379.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 26059, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-473.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 26060, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-6.21MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.14MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-302.8KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.26MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-244.3KB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-11.05MB/s(Youtube:不良林), server: tw02.henet.cyou, port: 20000, type: vmess, uuid: b3ea4273-e3a8-46a3-93b2-1aaa1c9dbd61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: tw02.henet.cyou}}
+  - {name: 🇨🇳 中国-408.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 26003, type: vmess, uuid: 708310bf-b4b2-3826-8071-956a85b1fe4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 443, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.tgfaka.com}}
+  - {name: 未知国家-2.04MB/s(Youtube:不良林), server: vfly4.win, port: 443, type: vmess, uuid: 424afb77-4724-4ddc-f4c0-35de9c2239f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly4.win}}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 未知国家-2.09MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇺🇸 美国-3.45MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-244.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-408.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 未知国家-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-244.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-408.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 未知国家-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-244.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-408.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 未知国家-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-11.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-244.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-408.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 未知国家-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-244.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-408.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 未知国家-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-244.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-408.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 未知国家-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-653.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-473.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.21MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.26MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-244.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-408.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
+      - 未知国家-2.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 未知国家-2.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
